feat: some prep for kubernetes and role filter for display time

--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,11 @@
-config.json
-node_modules/
-package.json
-package-lock.json
-register_cmd.js
-bdd.json
-bdd_backup.json
-user_list.json
-user_list_backup.json
-config.js
 .DS_Store
-config.py
 __pycache__
 mk.db*
-cups_emoji.py
-sql.py
-update_cups.py
-tables.sql
-tracks.json
-update_tracks.py
 cogs/logging.py
 mk.db-journal
 docker-compose.yml
 .vscode
-.Python
 venv
 .idea
 data
+.env
