--- a/.github/workflows/deployement.yml
+++ b/.github/workflows/deployement.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Login to wikodit registry
+      - name: Login to prismillon registry
         uses: docker/login-action@v3
         with:
           registry: ${{ vars.REGISTRY_URL }}
