--- a/.github/workflows/deployement.yml
+++ b/.github/workflows/deployement.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           push: true
           context: .
-          tags: ${{ vars.REGISTRY_URL }}/library/quaxly:latest
+          tags: ${{ vars.REGISTRY_URL }}/app/quaxly:latest
           cache-from: type=gha
           cache-to: type=gha
 
