--- a/.github/workflows/deployement.yml
+++ b/.github/workflows/deployement.yml
@@ -35,14 +35,14 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: build
 
-    steps:
-      - name: Deploy quaxly on cluster
-        uses: actions-hub/kubectl@master
-        env:
-          KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
-        with:
-          args: rollout restart deployment -n quaxly quaxly
+  #   steps:
+  #     - name: Deploy quaxly on cluster
+  #       uses: actions-hub/kubectl@master
+  #       env:
+  #         KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
+  #       with:
+  #         args: rollout restart deployment -n quaxly quaxly
