--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,4 +1,4 @@
-name: "deployement"
+name: "deployment"
 
 on:
   push:
@@ -34,15 +34,3 @@ jobs:
           tags: ${{ vars.REGISTRY_URL }}/app/quaxly:latest
           cache-from: type=gha
           cache-to: type=gha
-
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: build
-
-  #   steps:
-  #     - name: Deploy quaxly on cluster
-  #       uses: actions-hub/kubectl@master
-  #       env:
-  #         KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
-  #       with:
-  #         args: rollout restart deployment -n quaxly quaxly
